[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/pause menu.gd" type="Script" id=1]
[ext_resource path="res://2d_art/pause menu.png" type="Texture" id=2]

[node name="pause menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -120.5
margin_right = 123.5
margin_bottom = 120.5
texture = ExtResource( 2 )
expand = true

[node name="resume" type="TextureButton" parent="."]
margin_left = 269.0
margin_top = 115.0
margin_right = 378.0
margin_bottom = 145.0

[node name="options" type="TextureButton" parent="."]
margin_left = 268.0
margin_top = 155.0
margin_right = 379.0
margin_bottom = 189.0

[node name="restart" type="TextureButton" parent="."]
margin_left = 265.0
margin_top = 197.0
margin_right = 381.0
margin_bottom = 230.0

[node name="main menu" type="TextureButton" parent="."]
margin_left = 247.0
margin_top = 234.0
margin_right = 403.0
margin_bottom = 274.0

[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="main menu" to="." method="_on_main_menu_pressed"]
